[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Highscore.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 1 )

[node name="ScoreBoard" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Header" type="Label" parent="."]
margin_left = 193.0
margin_top = 60.0
margin_right = 298.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
text = "Highscores:"
align = 1

[node name="Label" type="Label" parent="."]
anchor_right = 0.083
anchor_bottom = 0.019
margin_left = 104.0
margin_top = 128.0
margin_right = 354.16
margin_bottom = 341.32
custom_fonts/font = SubResource( 2 )
text = "Highscores go here
1 highscore1
2 highscore2
3 highscore3
4 highscore4
5 highscore5
"
valign = 1

[node name="PlayAgain" type="Button" parent="."]
anchor_right = 0.604
anchor_bottom = 0.717
margin_left = 51.0
margin_top = 425.0
margin_right = 128.08
margin_bottom = 8.76001
custom_fonts/font = SubResource( 3 )
text = "Play Again"

[node name="Menu" type="Button" parent="."]
anchor_right = 0.289
anchor_bottom = 0.56
margin_left = 73.0
margin_top = 568.0
margin_right = 257.28
margin_bottom = 264.8
custom_fonts/font = SubResource( 4 )
text = "Menu"

[connection signal="pressed" from="PlayAgain" to="." method="_on_PlayAgain_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
